src/test/error/nilable1.lns
{
    let val:int = nil;  // error
}
{
    let mut val:int = 0;
    val = nil;          // error
}
{
    let mut val:int! = 0;
    val = val + 1;      // error
}
{
    fn get(): int[] {
        return [1];
    }
    if! get()[1] { // error
        print( _exp );
    }
}
{
    fn get(): int![] {
        return [1];
    }
    let val:int = get()[1];  // error
}
{
    fn get(val:int) {
    }
    get( nil ); // error
}
{
    let mut val:int = 0;
    let val2:int! = nil;
    let val3:stem = nil;
    let val4:stem! = nil;
    val = val2@@int;
    val = val3@@int;
    val = val4@@int;
}
{
   let mut val = 0;
   let mut valnil:int! = 0;
   let map = {
      "hoge": {
         "foo": {
            "val1": 1,
            "val2": 2,
         }
      }
   };
   val = map$.hoge$.foo$.val1;  // error
   valnil = map$.hoge$.foo$.val1;
}

{
   class Test {
      pub let val:int;
      let val2:int {pub};
      pub fn __init() {
         self.val = 0;
         self.val2 = 0;
      }
      pub fn func(): int {
         return 1;
      }
   }
   let test:Test! = new Test();
   let val:int = test$.func$(); // error
   let func:form! = fn (): int { return 0; };
   let val2:stem = func$(); // error
   let val3:int = test$.val; // error
   let val4:int = test$.$val; // error
}

{
   let val = unwrap 1;
}
